# notification_service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 7a7984dea68a_created_tables_text_template_message_.py  7e442b2d139b_created_tables_text_template_message_.py  98bef34d9473_created_tables_text_template_message_.py  ce95669f8720_created_tables_text_template_message_.py
app/: __init__.py
app/configuration/: __init__.py  events.py  server.py
app/internal/pkg/: __init__.py
app/internal/pkg/middlewares/: handle_http_exceptions.py  token_based_verification.py
app/internal/repository/: __init__.py
app/internal/repository/v1/: __init__.py
app/internal/routes/: __init__.py
app/internal/routes/v1/: __init__.py  email_correspondent.py  telegram_correspondent.py  text_template.py
app/internal/services/: __init__.py
app/internal/services/v1/: __init__.py  delivery.py  email_correspondent.py  message.py  recipient.py  telegram_correspondent_service.py  text_template.py
app/internal/workers/: __init__.py  email_sender.py
app/pkg/async_helpers/: async_multithread_lock.py
app/pkg/clients/: __init__.py  base_clients.py
app/pkg/clients/v1/: __init__.py  email.py
app/pkg/connectors/: __init__.py  connector.py  http_request.py  rabbitmq.py  resources.py
app/pkg/connectors/postgresql/: __init__.py  resource.py
app/pkg/connectors/rabbitmq/: rabbitmq.py  resource.py
app/pkg/handlers/: __init__.py  exception.py
app/pkg/logger/: logger.py
app/pkg/models/base/: exception.py  (+4 more)
app/pkg/settings/: settings.py
(+54 files in other folders)
